// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tip renders correctly 1`] = `
<div
  className="root test"
>
  Press Enter to search
   
</div>
`;

exports[`Tip renders correctly 2`] = `
<div
  className="root test"
>
  Press Enter to search
   
  <span
    className="highlight"
  >
    qu
  </span>
</div>
`;
